# CompressionFromScratch

./: .gitignore  CMakeLists.txt  README.MD  a.out  comp.cpp  huffman.cpp  huffman.hpp  jpeg  jpeg.cpp  makefile  mydata.csv  notes.txt  pre_computed.cpp  pre_computed.hpp  shared.cpp  shared.hpp  test.c  test.cpp
scripts/: run.sh
src/: experiments.cpp  experiments.hpp  huffman.cpp  huffman.hpp  jpeg.cpp  pre_computed.cpp  pre_computed.hpp  rle.cpp  rle.hpp  shared.cpp  shared.hpp
src/experiments/: experiments.cpp  experiments.hpp
